--- a/CRM/Views/Fee/Index.cshtml
+++ b/CRM/Views/Fee/Index.cshtml
@@ -43,9 +43,10 @@
                             <thead>
                                 <tr>
                                     <th style="width: 10px">#</th>
-                                    <th>Class Name</th>
-                                    <th>Create By</th>
-                                    <th>Create Date</th>
+                                    <th>Class</th>
+                                    <th>Course</th>
+                                    <th>Fee Name</th>
+                                    <th>Amount</th>
                                     <th>Edit</th>
                                     <th>Delete</th>
 
@@ -54,23 +55,28 @@
                             <tbody>
                                 @{
                                     int i = 1;
+
+
                                 }
-                                @foreach (var item in Model.FeeClassList)
+                                @if (Model.FeeClassList != null)
                                 {
-                                    <tr>
-                                        <td>@i</td>
-                                        <td>@item.FeeName</td>
-                                        <td>@item.Amount</td>
-                                        <td>@item.Class</td>
-                                        <td>
-                                            <button data-toggle="modal" data-target="#editModal" onclick="editClass(@item.Id)"> <i class="fas fa-edit"></i> Edit</button>
-                                        </td>
-                                        <td>
-                                            <button class="btn btn-success" onclick="deleteClass(@item.Id)">Delete</button>
-                                        </td>
-                                    </tr>
-                                    i++;
+                                    @foreach (var item in Model.FeeClassList)
+                                    {
+                                <tr>
+                                    <td>@i</td>
+                                    <td>@item.Class</td>
+                                    <td>@item.Course</td>
+                                    <td>@item.FeeName</td>
+                                    <td>@item.Amount</td>
+
+                                    <td>
+                                        <button class="btn btn-success" onclick="DeleteFee(@item.Id)">Delete</button>
+                                    </td>
+                                </tr>
+                                        i++;
+                                    }
                                 }
+
                             </tbody>
                         </table>
 
@@ -82,3 +88,106 @@
     </section>
     <!-- /.content -->
 </div>
+
+
+@*Modal Popup Start*@
+
+
+<div class="modal fade" id="modal-default">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add New Fee</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>Select Course</label>
+                    <select id="ddlCourse" asp-for="SelectedCourse" asp-items="Model.CourseList" class="form-control"></select>
+                </div>
+
+                <div class="form-group">
+                    <label>Select Class</label>
+                    <select id="ddlClass" asp-for="SelectedClass" asp-items="Model.ClassList" class="form-control"></select>
+                </div>
+
+
+                <div class="form-group">
+                    <label>Select Fee</label>
+                    <select id="ddlFee" asp-for="SelectedFee" asp-items="Model.FeeList" class="form-control"></select>
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="saveFee()"><i class="fas fa-save"></i> Save changes</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+@*Model popup End*@
+
+
+@section Scripts {
+    <script type="text/javascript">
+        // INSERT
+        var BASE_URL = "@baseUrl";
+        function saveFee() {
+            
+            var className = $('#ddlClass option:selected').text();
+            var couseName = $('#ddlCourse option:selected').text();
+            var feeId = $('#ddlFee option:selected').val();
+
+
+            $.post(BASE_URL + "/Fee/FeePost", {
+                feeId: feeId,
+                className: className,
+                couseName: couseName
+            }, function (res) {
+                if (res.success) location.reload();
+                else alert(res.message);
+            });
+        }
+
+        // OPEN EDIT POPUP
+        function editFee(id) {
+            $.get(BASE_URL +"/Fee/GetFee?id=" + id, function (data) {
+                $("#editId").val(data.id);
+                $("#editName").val(data.courseName);
+                $("#editModal").show();
+            });
+        }
+
+        // UPDATE
+        function updateClass() {
+            $.post("https://localhost:44382/Course/UpdateCourse",
+                {
+                    id: $("#editId").val(),
+                    className: $("#editName").val()
+                },
+                function (res) {
+                    if (res.success) location.reload();
+                    else alert(res.message);
+                });
+        }
+
+        function closeModal() {
+            $("#editModal").hide();
+        }
+
+        // DELETE
+        function DeleteFee(id) {
+            if (confirm("Are you sure?")) {
+                $.post(BASE_URL + "/Fee/DeleteFee", {
+                    id: id
+                }, function (res) {
+                    location.reload();
+                });
+            }
+        }
+
+    </script>
+}
